nginx-ingress/hello-world/omd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmetadata-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - path: /omd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: openmetadata
            port:
              number: 8585
